# minecraft_testbed

./: .env  .gitignore  .gitlab-ci.yml.disabled  .gitmodules  CHANGE_LOG.txt  GitVersion.yml  LICENSE  README.md  elasticPass.txt  release_notes.md
AccessControlContainer/: Dockerfile
Agents/: agent_dev_guide.md
Agents/AC_CMU_TA2_BEARD/: README.md  ac_cmu_ta2_beard_zscore.json  docker-compose.launcher.yml  docker-compose.yml  dockerfile  pylintrc  pyproject.toml  run_locally.sh  settings.env
Agents/AC_CMU_TA2_BEARD/ConfigFolder/: config.json  extraInfo.json
Agents/AC_CMU_TA2_BEARD/src/: cmuta2_beard_ac.py  computations.py  entrypoint.sh
Agents/AC_CMU_TA2_TED/: .gitignore  README.md  agent.cmd  agent.sh  baseline.py  graph.py  pyproject.toml  run_locally.sh  settings.env
Agents/AC_CMU_TA2_TED/ConfigFolder/: config.json  extraInfo.json
Agents/AC_CMU_TA2_TED/src/: cmuta2_ted_ac.py  computations.py
AsistDataIngesterContainer/: Dockerfile  README.md  build.cake
ClientMapSystem/: .dockerignore  Readme.md  build_and_dockerize.ps1  docker-compose.yml  dockerfile
Cloud/: docker-compose.network0.yml  docker-compose.network1.yml  docker-compose.network2.yml  docker-compose.network3.yml  docker-compose.network4.yml  docker-compose.network5.yml  docker-compose.network6.yml  docker-compose.network7.yml  testbed_build.sh  testbed_down.sh  testbed_up.sh
DashboardServiceContainer/: Dockerfile
ELK-Container/: .env  README.md  docker-compose.launcher.yml  docker-compose.yml  logstash.env
Local/: .env  README_docker_build.md  README_local_setup.md  default_config_paths.sh  (+33 more)
Tools/zero_conf/: README.md  bootstrap_minecraft.py  light_testbed.py  pyproject.toml
(+2198 files in other folders)
